k8s/php-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-deployment
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: php

  template:
    metadata:
      labels:
        app: php

    spec:
      containers:
      - name: php-container
        image: akashbora02/php-app:v1

        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: production

spec:
  selector:
    app: php

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
