k8s/react-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  namespace: production
spec:
  replicas: 2

  selector:
    matchLabels:
      app: react

  template:
    metadata:
      labels:
        app: react

    spec:
      containers:
      - name: react-container
        image: akashbora02/react-app:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: production
spec:
  selector:
    app: react

  ports:
  - port: 80
    targetPort: 3000

  type: ClusterIP
